now support history tracking

--- a/options.html
+++ b/options.html
@@ -37,6 +37,7 @@
 <br>
 
 <button id="clearqueue">清空缓存</button>
+<span style='color:red'>请在清空后重启浏览器</span>
 <span style='color:gray'> ( 下次将不考虑历史记录爬取所有数据 ) </span>
 <br>
 <br>
